# havy-os

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  build.sh  release-please-config.json  risc-vm  rust-toolchain.toml  site
.agent/workflows/: 3d-server-rack-implementation.md
.github/: BOOTSTRAP_RELEASES.md  RELEASE_PIPELINE.md  RELEASING.md
.github/workflows/: release-trigger.yml
kernel/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  d1.ld  link.x  memory.x  project.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  boot_console.rs  constants.rs  cpu.rs  d1_display.rs  d1_emac.rs  d1_mmc.rs  d1_touch.rs  dns.rs  dtb.rs  elf_loader.rs  fs.rs  http.rs  httpd.rs  init.rs  ipc.rs  klog.rs  lock.rs  main.rs  net.rs  netd.rs  process.rs  rtc.rs  sbi.rs  sched.rs  scheduler.rs  scripting.rs  shell.rs  syscall.rs  syscall_numbers.rs  task.rs  tcpd.rs  tls.rs  tls12.rs  trap.rs  uart.rs  uart_dw.rs  virtio_blk.rs  virtio_gpu.rs  virtio_input.rs  (+4 more)
kernel/src/boot/: audio.rs  console.rs  cpu.rs  dtb.rs  gpu.rs  logger.rs  memory.rs  mod.rs  network.rs  services.rs  storage.rs  touch.rs
kernel/src/clint/: mod.rs
kernel/src/commands/http/: mod.rs
kernel/src/cpu/: audio_proxy.rs  chase_lev.rs  display_proxy.rs  fs_proxy.rs  io_router.rs  ipc.rs  mod.rs  net_proxy.rs  sched.rs  switch_context.S
kernel/src/device/: block.rs  display.rs  mod.rs  network.rs  uart.rs  virtio_p9.rs
kernel/src/dtb/: mod.rs  parser.rs
kernel/src/fs/: mod.rs  p9.rs  sfs.rs  vfs.rs
kernel/src/lock/: mod.rs  utils.rs
kernel/src/lock/state/: blk.rs  cwd.rs  fs.rs  log.rs  mod.rs  net.rs  output.rs  ping.rs  shell.rs  tail.rs  waitq.rs
kernel/src/net/: buffers.rs  config.rs  d1_state.rs  device.rs  mod.rs  patching.rs  server.rs  state.rs  utils.rs
kernel/src/platform/: d1.rs  d1_audio.rs  d1_display.rs  d1_mmc.rs  d1_touch.rs  mod.rs  virt.rs
kernel/src/sbi/: mod.rs
kernel/src/services/: gpuid.rs  gui_cmd.rs  httpd.rs  klogd.rs  mod.rs  netd.rs  shelld.rs  sysmond.rs  tcpd.rs
kernel/src/ui/: boot.rs  colors.rs  cursor.rs  logo.raw  logo_small.raw  main_screen.rs  manager.rs  mod.rs
kernel/src/ui/widgets/: button.rs  checkbox.rs  label.rs  mod.rs  panel.rs  progress_bar.rs  radio_button.rs  window.rs
kernel/src/utils/: mod.rs
mkfs/: Cargo.toml
mkfs/.cargo/: config.toml
mkfs/root/etc/httpd/html/: 404.html  index.html  status.html
mkfs/root/home/: README.md
mkfs/src/: lib.rs  main.rs  riscv.rs
src/: lib.rs
