[workspace]
members = ["kernel", "mkfs"]
resolver = "2"

# Virtual package for release-please
[package]
name = "havy-os"
version = "0.1.48"
edition = "2021"
publish = false

# Workspace-wide release optimizations
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false

# Optimize all dependencies in release mode
[profile.release.package."*"]
opt-level = 3

# Keep some debug info for profiling (uncomment if needed)
# [profile.release]
# debug = 1




