[package]
name = "kernel"
version = "0.1.31"
edition = "2021"

[dependencies]
riscv = "0.10.1"
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
linked_list_allocator = "0.10"
bitflags = "2.4"
log = { version = "0.4", default-features = false }

# WASM runtime for userland scripts
wasmi = { version = "0.44", default-features = false }

# Graphics library for framebuffer rendering
[dependencies.embedded-graphics]
version = "0.8"
default-features = false

# Font for text rendering
[dependencies.profont]
version = "0.7"
default-features = false

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = [
    "alloc",
    "log",
    "medium-ethernet",
    "proto-ipv4",
    "socket-icmp",
    "socket-tcp",
    "socket-udp",
]

# TLS support for HTTPS
[dependencies.embedded-tls]
version = "0.17"
default-features = false
features = ["alloc"]

[dependencies.embedded-io]
version = "0.6"

[dependencies.embedded-io-async]
version = "0.6"

[dependencies.rand_core]
version = "0.6"
default-features = false

# Crypto primitives for TLS (RustCrypto stack)
[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.hmac]
version = "0.12"
default-features = false

[dependencies.aes-gcm]
version = "0.10"
default-features = false
features = ["alloc", "aes"]

[dependencies.p256]
version = "0.13"
default-features = false
features = ["ecdh", "arithmetic"]

[dependencies.x25519-dalek]
version = "2"
default-features = false
features = ["static_secrets", "alloc"]

# Embassy async runtime for HTTP server
[dependencies.embassy-executor]
version = "0.7"
default-features = false
features = ["arch-spin", "executor-thread"]

[dependencies.embassy-net]
version = "0.7"
default-features = false
features = ["tcp", "proto-ipv4", "medium-ethernet"]

[dependencies.embassy-time]
version = "0.4"
default-features = false
features = ["tick-hz-1_000"]

[dependencies.embassy-sync]
version = "0.6"
default-features = false

[dependencies.embassy-net-driver]
version = "0.2"
default-features = false

[dependencies.static_cell]
version = "2"
default-features = false

# Note: Release profile is defined at workspace root (Cargo.toml)
